--- a/.github/workflows/launch-terraform-networks.yaml
+++ b/.github/workflows/launch-terraform-networks.yaml
@@ -40,6 +40,6 @@ jobs:
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        run: terraform apply --lock=false --var-file=../vars/dev.tvars
+        run: terraform apply  -auto-approve --lock=false --var-file=../vars/dev.tvars
         working-directory: terraformaws/networks
       
