--- a/.github/workflows/launch-terraform-networks.yaml
+++ b/.github/workflows/launch-terraform-networks.yaml
@@ -6,7 +6,7 @@ env:
   TERRAFORM_VERSION: 0.15.5
 
 jobs:
-  create-networks:
+  plan-networks:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -40,6 +40,6 @@ jobs:
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        run: terraform plan  -auto-approve --lock=false --var-file=../vars/dev.tvars
+        run: terraform plan  --lock=false --var-file=../vars/dev.tvars
         working-directory: terraformaws/networks
       
