Improve Github Actions

--- a/.github/workflows/terraform-networks-reusable.yaml
+++ b/.github/workflows/terraform-networks-reusable.yaml
@@ -18,7 +18,7 @@ env:
   ENVIRONMENT_NAME: dev
 
 jobs:
-  networks:
+  apply_networks:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
