--- a/.github/workflows/terraform-networks-reusable.yaml
+++ b/.github/workflows/terraform-networks-reusable.yaml
@@ -15,6 +15,7 @@ on:
 
 env:
   TERRAFORM_VERSION: 0.15.5
+  AWS_REGION: eu-west-3
 
 jobs:
   apply_networks:
@@ -36,6 +37,7 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.aws_access_key }}
           aws-secret-access-key: ${{ secrets.aws_secret_key }}
+          aws-region: ${{ env.AWS_REGION}}
           role-duration-seconds: 3600
 
       - name: network init
