--- a/.github/workflows/terraform-secrets-reusable.yaml
+++ b/.github/workflows/terraform-secrets-reusable.yaml
@@ -51,8 +51,8 @@ jobs:
         run: terraform plan  --lock=false --var-file=../vars/${{ github.event.inputs.environment}}.tvars
         working-directory: terraformaws/secrets
 
-      - name: secrets plan
-        id: apply
+      - name: secrets apply
+        id: apply-secrets
         run: terraform apply -auto-approve  --lock=false --var-file=../vars/${{ github.event.inputs.environment}}.tvars
         working-directory: terraformaws/secrets
       
