--- a/.github/workflows/delete-eks-station-all.yaml
+++ b/.github/workflows/delete-eks-station-all.yaml
@@ -10,6 +10,10 @@ on:
           - dev
         required: true
 
+env:
+  TERRAFORM_VERSION: 0.15.5
+  AWS_REGION: eu-west-3
+
 
 jobs:
   delete_secrets:
