--- a/.github/workflows/deploy-eks-station-all.yaml
+++ b/.github/workflows/deploy-eks-station-all.yaml
@@ -46,4 +46,14 @@ jobs:
     secrets:
       aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
       aws_secret_key:  ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+
+  # Deploy EKS
+  deploystation:
+    runs-on: ubuntu-latest
+    needs: eks
+    steps:
+      - name: launch station
+        id: launch-station
+        run: launchAwsStationChart.sh internal
+        working-directory: kubernetes
       
