--- a/.github/workflows/deploy-eks-station-all.yaml
+++ b/.github/workflows/deploy-eks-station-all.yaml
@@ -47,11 +47,16 @@ jobs:
       aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
       aws_secret_key:  ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
-  # Deploy EKS
-  deploystation:
+  # Deploy kubernetes station
+  deploy_station:
     runs-on: ubuntu-latest
     needs: eks
     steps:
+
+      - name: Checkout
+        id: checkout
+        uses: actions/checkout@v2
+
       - name: launch station
         id: launch-station
         run: launchAwsStationChart.sh internal
