--- a/.github/workflows/deploy-eks-station-all.yaml
+++ b/.github/workflows/deploy-eks-station-all.yaml
@@ -57,6 +57,11 @@ jobs:
         id: checkout
         uses: actions/checkout@v2
 
+     - name: Debug directory
+        id: debug-directory-station
+        run: ls
+        working-directory: kubernetes
+
       - name: launch station
         id: launch-station
         run: launchAwsStationChart.sh internal
