--- a/.github/workflows/deploy-eks-station-all.yaml
+++ b/.github/workflows/deploy-eks-station-all.yaml
@@ -11,6 +11,13 @@ on:
           - dev
         required: true
 
+      region:
+        type: choice
+        description: The region where we can create objects
+        options:
+          - eu-west-3
+        required: true
+
 #env:
 #  ENVIRONMENT_NAME: dev
 
@@ -21,6 +28,7 @@ jobs:
     with:
       # environment: ${{ env.ENVIRONMENT_NAME}}
       environment: ${{ github.events.inputs.environment}}
+      region: ${{ github.events.inputs.region}}
     secrets:
       aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
       aws_secret_key:  ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -32,6 +40,7 @@ jobs:
     with:
       # environment: ${{ env.ENVIRONMENT_NAME}}
       environment: ${{ github.events.inputs.environment}}
+      region: ${{ github.events.inputs.region}}
     secrets:
       aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
       aws_secret_key:  ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -43,6 +52,7 @@ jobs:
     with:
       # environment: ${{ env.ENVIRONMENT_NAME}}
       environment: ${{ github.events.inputs.environment}}
+      region: ${{ github.events.inputs.region}}
     secrets:
       aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
       aws_secret_key:  ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -56,6 +66,14 @@ jobs:
       - name: Checkout
         id: checkout
         uses: actions/checkout@v2
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.aws_access_key }}
+          aws-secret-access-key: ${{ secrets.aws_secret_key }}
+          aws-region: {{ github.events.inputs.region}}
+          role-duration-seconds: 3600
 
       - name: launch station
         id: launch-station
