--- a/.github/workflows/terraform-networks-reusable.yaml
+++ b/.github/workflows/terraform-networks-reusable.yaml
@@ -7,6 +7,10 @@ on:
         type: string
         required: true
 
+      region:
+        type: string
+        required: true
+
     secrets:
       aws_access_key:
         required: true
@@ -15,7 +19,6 @@ on:
 
 env:
   TERRAFORM_VERSION: 0.15.5
-  AWS_REGION: eu-west-3
 
 jobs:
   apply_networks:
@@ -37,7 +40,7 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.aws_access_key }}
           aws-secret-access-key: ${{ secrets.aws_secret_key }}
-          aws-region: ${{ env.AWS_REGION}}
+          aws-region: ${{ github.event.inputs.region}}
           role-duration-seconds: 3600
 
       - name: network init
