--- a/.github/workflows/terraform-secrets-reusable.yaml
+++ b/.github/workflows/terraform-secrets-reusable.yaml
@@ -6,6 +6,11 @@ on:
       environment:
         type: string
         required: true
+      
+      region:
+        type: string
+        required: true
+
 
     secrets:
       aws_access_key:
@@ -37,7 +42,7 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.aws_access_key }}
           aws-secret-access-key: ${{ secrets.aws_secret_key }}
-          aws-region: ${{ env.AWS_REGION}}
+          aws-region: ${{ github.event.inputs.region}}
           role-duration-seconds: 3600
 
 
