--- a/.github/workflows/deploy-eks-station-all.yaml
+++ b/.github/workflows/deploy-eks-station-all.yaml
@@ -72,7 +72,7 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.aws_access_key }}
           aws-secret-access-key: ${{ secrets.aws_secret_key }}
-          aws-region: {{ github.events.inputs.region}}
+          aws-region: ${{ github.events.inputs.region }}
           role-duration-seconds: 3600
 
       - name: launch station
