--- a/.github/workflows/delete-eks-station-all.yaml
+++ b/.github/workflows/delete-eks-station-all.yaml
@@ -17,8 +17,31 @@ env:
 
 jobs:
 
+
+  destroy_station:
+    runs-on: ubuntu-latest
+    steps:
+
+      - name: Checkout
+        id: checkout
+        uses: actions/checkout@v2
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.aws_access_key }}
+          aws-secret-access-key: ${{ secrets.aws_secret_key }}
+          aws-region: ${{ env.AWS_REGION}}
+          role-duration-seconds: 3600
+
+      - name: delete helm station
+        id: delete-station
+        run: sh deleteAwsStationChart.sh
+        working-directory: kubernetes
+
   delete_eks:
     runs-on: ubuntu-latest
+    needs: destroy_station
     steps:
       - name: Checkout
         id: checkout
