--- a/.github/workflows/deploy-eks-station-all.yaml
+++ b/.github/workflows/deploy-eks-station-all.yaml
@@ -61,6 +61,9 @@ jobs:
   deploy_station:
     runs-on: ubuntu-latest
     needs: eks
+    env:
+      # environment: ${{ env.ENVIRONMENT_NAME}}
+      region: ${{ github.events.inputs.region}}
     steps:
 
       - name: Checkout
@@ -68,14 +71,14 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Debug variable
-        run: echo "Region  ${{ github.events.inputs.region}}"
+        run: echo "Region  ${{ env.region}}"
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-access-key-id: ${{ secrets.aws_access_key }}
           aws-secret-access-key: ${{ secrets.aws_secret_key }}
-          aws-region: ${{ github.events.inputs.region}}
+          aws-region: ${{ env.region}}
           role-duration-seconds: 3600
 
       - name: launch station
