--- a/.github/workflows/deploy-eks-station-all.yaml
+++ b/.github/workflows/deploy-eks-station-all.yaml
@@ -27,8 +27,8 @@ jobs:
     uses: ./.github/workflows/terraform-networks-reusable.yaml
     with:
       # environment: ${{ env.ENVIRONMENT_NAME}}
-      environment: ${{ github.events.inputs.environment}}
-      region: ${{ github.events.inputs.region}}
+      environment: ${{ github.event.inputs.environment}}
+      region: ${{ github.event.inputs.region}}
     secrets:
       aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
       aws_secret_key:  ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -39,8 +39,8 @@ jobs:
     needs: networks
     with:
       # environment: ${{ env.ENVIRONMENT_NAME}}
-      environment: ${{ github.events.inputs.environment}}
-      region: ${{ github.events.inputs.region}}
+      environment: ${{ github.event.inputs.environment}}
+      region: ${{ github.event.inputs.region}}
     secrets:
       aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
       aws_secret_key:  ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -51,8 +51,8 @@ jobs:
     needs: secrets
     with:
       # environment: ${{ env.ENVIRONMENT_NAME}}
-      environment: ${{ github.events.inputs.environment}}
-      region: ${{ github.events.inputs.region}}
+      environment: ${{ github.event.inputs.environment}}
+      region: ${{ github.event.inputs.region}}
     secrets:
       aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
       aws_secret_key:  ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -61,24 +61,18 @@ jobs:
   deploy_station:
     runs-on: ubuntu-latest
     needs: eks
-    env:
-      # environment: ${{ env.ENVIRONMENT_NAME}}
-      region: ${{ github.events.inputs.region}}
     steps:
 
       - name: Checkout
         id: checkout
         uses: actions/checkout@v2
 
-      - name: Debug variable
-        run: echo "Region  ${{ env.region}}"
-
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-access-key-id: ${{ secrets.aws_access_key }}
           aws-secret-access-key: ${{ secrets.aws_secret_key }}
-          aws-region: ${{ env.region}}
+          aws-region: ${{ github.event.inputs.region}}
           role-duration-seconds: 3600
 
       - name: launch station
