--- a/.github/workflows/delete-eks-station-all.yaml
+++ b/.github/workflows/delete-eks-station-all.yaml
@@ -81,6 +81,7 @@ jobs:
 
   delete_secrets:
     runs-on: ubuntu-latest
+    needs: delete_eks
     steps:
       - name: Checkout
         id: checkout
