--- a/.github/workflows/delete-eks-station-all.yaml
+++ b/.github/workflows/delete-eks-station-all.yaml
@@ -26,6 +26,7 @@ jobs:
 
   destroy_station:
     runs-on: ubuntu-latest
+    environment: ${{ github.event.inputs.environment}}
     steps:
 
       - name: Checkout
