--- a/.github/workflows/deploy-eks-stationargocd-all.yaml
+++ b/.github/workflows/deploy-eks-stationargocd-all.yaml
@@ -86,6 +86,19 @@ jobs:
         run: bash launchAwsStationChart.sh internal
         working-directory: kubernetes/helm
 
+  # Installation ArgoCD
+  install_argocd:
+    runs-on: ubuntu-latest
+    needs: deploy_station
+      
+      - name: Checkout
+        id: checkout
+        uses: actions/checkout@v2
+      
+      - name: Installation Kubernetes
+        id: kubernetes_installation
+        run: curl -LO https://storage.googleapis.com/kubernetes-release/release/v1.23.6/bin/linux/amd64/kubectl && chmod +x kubectl && mv kubectl /usr/local/bin/kubectl
+
       - name: Installation argoCD
         id: argocd-installation
         run: kubectl create namespace argocd && kubectl apply -n argocd -f https://raw.githubusercontent.com/argoproj/argo-cd/stable/manifests/install.yaml
