--- a/.github/workflows/delete-eks-stationhelm-all.yaml
+++ b/.github/workflows/delete-eks-stationhelm-all.yaml
@@ -112,8 +112,8 @@ jobs:
 
 
       - name: secrets init
-        id: init-secrets-without-backend
-        run: terraform init 
+        id: init-secrets
+        run: terraform init  -backend-config="backends/${{ github.event.inputs.environment}}_backend.tfvars" 
         working-directory: terraformaws/secrets
 
       - name: secrets destroy
@@ -146,8 +146,8 @@ jobs:
 
 
       - name: networks init
-        id: init-networks-without-backend
-        run: terraform init 
+        id: init-networks
+        run: terraform init  -backend-config="backends/${{ github.event.inputs.environment}}_backend.tfvars" 
         working-directory: terraformaws/networks
 
       - name: networks destroy
