Correction et amelioration code

--- a/.github/workflows/terraform-secrets-reusable.yaml
+++ b/.github/workflows/terraform-secrets-reusable.yaml
@@ -47,8 +47,8 @@ jobs:
 
 
       - name: secrets init
-        id: init-secrets-without-backend
-        run: terraform init 
+        id: init-secrets
+        run: terraform init -backend-config="backends/${{ github.event.inputs.environment}}_backend.tfvars" 
         working-directory: terraformaws/secrets
 
       - name: secrets plan
