--- a/.github/workflows/terraform-eks-reusable.yaml
+++ b/.github/workflows/terraform-eks-reusable.yaml
@@ -45,8 +45,8 @@ jobs:
           role-duration-seconds: 3600
 
       - name: eks init
-        id: init-eks-without-backend
-        run: terraform init 
+        id: init-eks
+        run: terraform init  -backend-config="backends/${{ github.event.inputs.environment}}_backend.tfvars"
         working-directory: terraformaws/eks
 
       - name: eks plan
