--- a/.github/workflows/deploy-eks-stationargocd-all.yaml
+++ b/.github/workflows/deploy-eks-stationargocd-all.yaml
@@ -196,7 +196,7 @@ jobs:
         run: |
           kubectl -n argocd patch secret argocd-initial-admin-secret \
           -p '{"stringData": {
-          "data.password": "${{ steps.argocd-passbase64.outputs.password }}",
+          "data.password": "${{ steps.argocd-passbase64.outputs.password }}"
           }}'
 
 
@@ -237,8 +237,16 @@ jobs:
           ./get_helm.sh
 
 
+      - name: Retrieve back ingress
+        id: stationback-targetgroupbinding
+        run: |
+          echo "::set-output name=targetGroupBinding::$( aws elbv2 describe-target-groups --name station-back-target-group  --query 'TargetGroups[0].TargetGroupArn' --output text)"
+
+
       - name: Installation application on argocd
         id:  argocd-installationappli
-        run: helm upgrade -i applications applications
+        run: |
+          helm upgrade -i applications applications \
+          --set station.back.ingressarn=${{ steps.stationback-targetgroupbinding.outputs.targetGroupBinding }}
         working-directory: kubernetes/argocd
   
