--- a/.github/workflows/test-helm-repo.yaml
+++ b/.github/workflows/test-helm-repo.yaml
@@ -36,6 +36,7 @@ jobs:
         with:
           repository: kagzouli/helm-charts
           path: helm-repo
+          ref: main
 
       # Retrieve helm
       - name: Install Helm
