--- a/.github/workflows/test-helm-repo.yaml
+++ b/.github/workflows/test-helm-repo.yaml
@@ -84,6 +84,8 @@ jobs:
             git config --global user.email "noreply-kagzouli@exakaconsulting.org"
             git remote -v
             git branch
-            git add . && git commit -m "Deploiement version ${{ github.event.inputs.helm_project_version}} && git push origin main"
+            git add . 
+            git commit -m "Deploiement version ${{ github.event.inputs.helm_project_version}}" 
+            git push origin main
         working-directory: helm-repo
 
