Add peter murray for token

--- a/.github/workflows/test-helm-repo.yaml
+++ b/.github/workflows/test-helm-repo.yaml
@@ -38,6 +38,13 @@ jobs:
           path: helm-repo
           ref: main
 
+      - name: Get Token
+        id: get_workflow_token
+        uses: peter-murray/workflow-application-token-action@v1
+        with:
+          application_id: ${{ secrets.APPLICATION_ID }}
+          application_private_key: ${{ secrets.APPLICATION_PRIVATE_KEY }}
+
       # Retrieve helm
       - name: Install Helm
         run: |
@@ -45,24 +52,29 @@ jobs:
           chmod 700 get_helm.sh
           ./get_helm.sh
 
+      # Generate package helm for station
       - name: package station
         id: package-station
         run: helm package station --version ${{ github.event.inputs.helm_project_version}}
         working-directory: current/kubernetes/helm
 
+      # Copy station to helm repository
       - name: Copie station helm repo
         id: copy-station
         run: cp current/kubernetes/helm/station-${{ github.event.inputs.helm_project_version}}.tgz helm-repo/
 
+      # Generate package helm for transverse
       - name: package transverse
         id: package-transverse
         run: helm package transverse --version ${{ github.event.inputs.helm_project_version}}
         working-directory: current/kubernetes/helm
 
+      # Copy transverse to helm repository
       - name: Copie transverse helm repo
         id: copy-transverse
         run: cp current/kubernetes/helm/transverse-${{ github.event.inputs.helm_project_version}}.tgz helm-repo/
 
+      # Index everything
       - name: index helm repo
         id: index-helm-repo
         run:  helm repo index helm-repo  --url ${{ env.STATION_HELM_REPO}} 
@@ -77,13 +89,12 @@ jobs:
         run:  cat index.yaml
         working-directory: helm-repo
 
+      # Push to Git repo
       - name: push index repo
         id: push-helm-repo
         run:  |
             git config --global user.name "kagzouli"
             git config --global user.email "noreply-kagzouli@exakaconsulting.org"
-            git remote -v
-            git branch
             git add . 
             git commit -m "Deploiement version ${{ github.event.inputs.helm_project_version}}" 
             git push origin main
