--- a/kubernetes/argocd/applications/values.yaml
+++ b/kubernetes/argocd/applications/values.yaml
@@ -1,4 +1,8 @@
 # Value of station application
+helm:
+  repository: https://kagzouli.github.io/helm-charts/
+
+
 station:
   back:
     ingressarn: ""
